--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,26 @@
     0.125em 0.125em 0.25em rgba(0,0,0, .15);
 }
 
+#root,html,body {
+    width: 100%;
+    height: 100%;
+}
+
+*, 
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+.entire-app {
+    margin: 3rem;
+    width: 100%;
+    height: 100%;
+}
 body {
     background-color: white;
-    margin: 0;
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
     line-height: 1.6;
 }
+
