--- a/src/components/Cards/cards.css
+++ b/src/components/Cards/cards.css
@@ -1,13 +1,18 @@
 .cards-container {
-    display: flex;
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(auto-fit,minmax(300px, 1fr));
+    background-color: pink;
+    padding: 3rem;
 }
 
 .card {
-    background-color: pink;
-   
+    display: grid;
+
 }
 
 .card img {
-    width: 3rem;
+    width: 100%;
+    
 }
 
