--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
 #root,html,body {
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
 }
 
 *, 
@@ -31,10 +32,12 @@
 }
 
 .entire-app {
-    margin: 3rem;
+   
     width: 100%;
     height: 100%;
+    padding: 1rem;
 }
+
 body {
     background-color: white;
     font-family: var(--ff-primary);
